# columnar-processor

./: .gitattributes  Cargo.toml  README.md
benches/: benchmark.rs  comparison.rs  cpu_scaling.rs  scalability.rs
bindings/java/src/main/com/example/columnar/: ColumnarProcessor.java
examples/: aggregate.rs  cached_aggregates.rs  filter.rs  group_by.rs  simd_demo.rs
examples/utils/: mod.rs
src/: lib.rs  main.rs
src/helpers/: mod.rs  simd_helpers.rs
src/java/: jni_columnar_processor.rs  mod.rs
src/processor/: column.rs  columnar_processor.rs  mod.rs  query_builder.rs
src/python/: mod.rs  py_aggregate_op.rs  py_columnar_processor.rs  py_filter_predicate.rs  py_query_builder.rs
tests/: integration.rs
