[package]
name = "columnar_processor"
version = "0.1.0"
edition = "2024"

[lib]
name = "columnar_processor"       # same as package name (default, but explicit is clearer)
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "columnar_processor-bin"   # or just "main"
path = "src/main.rs"

[features]
default = []
python-bindings = ["pyo3"]
jni-bindings = ["jni", "lazy_static"]

[dependencies]
arrow2 = { version = "0.17.4", features = ["io_ipc"], default-features = false }
dhat = "0.3"
jemallocator = "0.5"
jni = { version = "0.21.1", optional = true }
lazy_static = { version = "1.4", optional = true }
lexical-core = "1.0.6"
lru = "0.16.1"
memchr = "2.7.6"
memmap2 = "0.9.8"
pyo3 = { version = "0.26.0", features = ["extension-module"], optional = true  }
rand = "0.9.2"
rayon = "1.7"
tempfile = "3.23.0"
thiserror = "2.0.17"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
dhat = "0.3.3"
polars = { version = "0.51", features = ["lazy", "csv"] }

[profile.release]
debug = 1

[[bench]]
name = "benchmark"
harness = false    # Use Criterion's harness

[[bench]]
name = "cpu_scaling"
harness = false

[[bench]]
name = "scalability"
harness = false

[[bench]]
name = "comparison"
harness = false

